--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -50,19 +52,17 @@ button {
   cursor: pointer;
 }
 
+:root {
+  --black: hsla(240, 100%, 5%, 1);
+  --gray: hsla(233, 8%, 79%, 1);
+  --dark-gray: hsla(236, 13%, 42%, 1);
+  --yellow: hsla(35, 77%, 62%, 1);
+  --orange: hsla(5, 85%, 63%, 1);
+}
+
 body {
   line-height: 1.3;
   text-rendering: optimizeSpeed;
-  font-family: 'Plus Jakarta Sans', sans-serif;
-  background-color: ghostwhite;
-}
-
-/* colors  */
-:root {
-  /* primary */
-  --dark-blue: hsla(234, 53%, 16%, 1);
-
-  /* neutral */
-  --gray: hsla(233, 10%, 56%, 1);
-
+  font-family: 'Inter', sans-serif;
+  background-color: #FFFDFA;
 }
