--- a/style.css
+++ b/style.css
@@ -371,3 +371,50 @@ footer {
     /* color: var(--black); */
   }
 }
+
+body {
+  -webkit-animation: slideIn 1s ease;
+  animation: slideIn 2s ease;
+  animation-delay: 800s;
+}
+
+@-webkit-keyframes slideIn {
+  0% {
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3);
+    opacity: 0;
+  }
+
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@-webkit-keyframes appear {
+  0% {
+    opacity: 0;
+  }
+
+  40% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+
+  40% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
